--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img src="images/wind.png" alt="">
                 </div>
                 <div>
-                    <p class="humidity">15 km/h</p>
+                    <p class="wind">15 km/h</p>
                     <p>Wind Speed</p>
                 </div>
 
