--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Weather App</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="card">
-        <div class="search">
-            <input type="text" id="city-input" placeholder="Enter city name" spellcheck="false">
-            <button> <img src="images/search.png" alt=""></button>
+      <div class="search">
+        <input
+          type="text"
+          id="city-input"
+          placeholder="Enter city name"
+          spellcheck="false"
+        />
+        <button><img src="images/search.png" alt="" /></button>
+      </div>
+
+      <div class="error">
+        <p>Invalid city name</p>
+      </div>
+
+      <div class="weather">
+        <img src="images/rain.png" class="weather-icon" alt="" />
+        <h1 class="temp">22°c</h1>
+        <h2 class="city">New York</h2>
+        <div class="details">
+          <div class="col">
+            <img src="images/humidity.png" alt="" />
+          </div>
+          <div>
+            <p class="humidity">50%</p>
+            <p>Humidity</p>
+          </div>
+
+          <div class="col">
+            <img src="images/wind.png" alt="" />
+          </div>
+          <div>
+            <p class="wind">15 km/h</p>
+            <p>Wind Speed</p>
+          </div>
         </div>
-
-        <div class="error">
-            <p>Imvalid city name</p>
-        </div>
-
-        <div class="weather">
-            <img src="images/rain.png" class="weather-icon" alt="">
-            <h1 class="temp">22°c</h1>
-            <h2 class="city">New York</h2>
-            <div class="details">
-
-                <div class="col">
-                    <img src="images/humidity.png" alt="">
-                </div>
-                <div>
-                    <p class="humidity">50%</p>
-                    <p>Humidity</p>
-                </div>
-
-                <div class="col">
-                    <img src="images/wind.png" alt="">
-                </div>
-                <div>
-                    <p class="wind">15 km/h</p>
-                    <p>Wind Speed</p>
-                </div>
-
-            </div>
-        </div>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
